2008-05-28 REVERTING due to PDF problem.  Replaced '-' with u'\u2212'
           for minus sign as requested in
           http://sourceforge.net/tracker/index.php?func=detail&aid=1962574&group_id=80706&atid=560720

2008-05-28 zero width/height Rectangles no longer influence the
           autoscaler.  Useful for log histograms with empty bins -
           JDH

2008-05-28 Fix rendering of composite glyphs in Type 3 conversion
           (particularly as evidenced in the Eunjin.ttf Korean font)
           Thanks Jae-Joon Lee for finding this!

2008-05-27 Rewrote the cm.ScalarMappable callback infrastructure to
           use cbook.CallbackRegistry rather than custom callback
           handling.  Amy users of add_observer/notify of the
           cm.ScalarMappable should uae the
           cm.ScalarMappable.callbacksSM CallbackRegistry instead. JDH

2008-05-27 Fix TkAgg build on Ubuntu 8.04 (and hopefully a more
           general solution for other platforms, too.)

2008-05-24 Added PIL support for loading images to imread (if PIL is
           available) - JDH

2008-05-23 Provided a function and a method for controlling the
           plot color cycle. - EF

2008-05-23 Major revision of hist(). Can handle 2D arrays and create
           stacked histogram plots; keyword 'width' deprecated and
           rwidth (relative width) introduced; align='edge' changed
           to center of bin - MM

2008-05-22 Added support for ReST-based doumentation using Sphinx.
           Documents are located in doc/, and are broken up into
           a users guide and an API reference. To build, run the
           make.py files. Sphinx-0.4 is needed to build generate xml,
           which will be useful for rendering equations with mathml,
           use sphinx from svn until 0.4 is released - DSD

2008-05-21 Fix segfault in TkAgg backend - MGD

2008-05-21 Fix a "local variable unreferenced" bug in plotfile - MM

2008-05-19 Fix crash when Windows can not access the registry to